<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/ic_undo"
        android:title="@string/editor_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_redo"
        android:icon="@drawable/ic_redo"
        android:title="@string/editor_redo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_export"
        android:icon="@drawable/ic_export"
        android:title="@string/editor_export"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_save"
        android:icon="@drawable/ic_save"
        android:title="@string/editor_menu_save"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_duplicate"
        android:title="@string/editor_menu_duplicate"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_info"
        android:title="@string/editor_menu_info"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/editor_menu_settings"
        app:showAsAction="never" />
</menu>
