<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/colorBackground"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/pc_surface"
        app:navigationIcon="@drawable/ic_close"
        app:navigationContentDescription="@string/common_close"
        app:title="@string/title_settings" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/screen_gutter"
            android:paddingEnd="@dimen/screen_gutter"
            android:paddingBottom="@dimen/space_8">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_3"
                android:text="@string/settings_appearance"
                android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_2"
                android:text="@string/settings_theme"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Title" />

            <RadioGroup
                android:id="@+id/themeGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/themeSystem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_theme_system" />

                <RadioButton
                    android:id="@+id/themeLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_theme_light" />

                <RadioButton
                    android:id="@+id/themeDark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_theme_dark" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_2"
                android:text="@string/settings_language"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Title" />

            <RadioGroup
                android:id="@+id/languageGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/langSystem"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_language_system" />

                <RadioButton
                    android:id="@+id/langEn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_language_en" />

                <RadioButton
                    android:id="@+id/langAr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/settings_language_ar" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_6"
                android:text="@string/settings_editing"
                android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/autosave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target"
                android:text="@string/settings_autosave" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/gridSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target"
                android:text="@string/settings_transparency_grid" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/stylusSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target"
                android:text="@string/settings_stylus" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/reduceMotion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target"
                android:text="@string/settings_reduce_motion" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_6"
                android:text="@string/settings_export"
                android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

            <RadioGroup
                android:id="@+id/exportGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/exportPng"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/export_png" />

                <RadioButton
                    android:id="@+id/exportJpeg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/export_jpeg" />

                <RadioButton
                    android:id="@+id/exportWebp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/touch_target"
                    android:text="@string/export_webp" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_6"
                android:text="@string/settings_models"
                android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

            <TextView
                android:id="@+id/modelsSummary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Body"
                tools:text="1 used · 4.7 MB downloaded" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_2"
                android:text="@string/settings_model_tier"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Title" />

            <Spinner
                android:id="@+id/modelTier"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/meteredSwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/touch_target"
                android:text="@string/settings_download_metered" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/space_6"
                android:text="@string/settings_about"
                android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Body"
                tools:text="Version 0.5.0" />

            <TextView
                android:id="@+id/engineVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.PhotoCraft.Body"
                tools:text="Engine 0.5.0" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
