<?xml version="1.0" encoding="utf-8"?>
<!-- Transform: rotate, flip and resize through the engine's transform and image-size commands. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pc_surface_panel"
    android:orientation="vertical"
    android:paddingStart="@dimen/screen_gutter"
    android:paddingEnd="@dimen/screen_gutter"
    android:paddingTop="@dimen/space_2"
    android:paddingBottom="@dimen/space_3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transform_title"
        android:textAppearance="@style/Widget.PhotoCraft.PanelTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rotateLeft"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_1"
            android:layout_weight="1"
            android:text="@string/transform_rotate_left" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/rotateRight"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transform_rotate_right" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/flipH"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_1"
            android:layout_weight="1"
            android:text="@string/transform_flip_h" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/flipV"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transform_flip_v" />
    </LinearLayout>

    <TextView
        android:id="@+id/scaleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_3"
        android:text="@string/transform_scale"
        android:textAppearance="@style/TextAppearance.PhotoCraft.Caption" />

    <com.google.android.material.slider.Slider
        android:id="@+id/scaleSlider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stepSize="5.0"
        android:value="100.0"
        android:valueFrom="10.0"
        android:valueTo="200.0" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/applyScale"
        style="@style/Widget.PhotoCraft.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/adjust_apply" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_2"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fit"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_1"
            android:layout_weight="1"
            android:text="@string/transform_fit" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/actualSize"
            style="@style/Widget.PhotoCraft.Button.Outlined"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/transform_actual_size" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cropToSelection"
        style="@style/Widget.PhotoCraft.Button.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_1"
        android:text="@string/transform_crop"
        app:icon="@drawable/ic_crop" />
</LinearLayout>
